2011-11-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	warnings: 'extra-portability' category is not implied by '-Wall'
	This change is only intended for the 1.11.x series.  In automake
	1.12, `-Wall' will be meant to enable `-Wextra-portability'.
	* lib/Automake/ChannelDefs.pm (switch_warning): Do not enable
	extra-portability warnings when `-Wall' is given.  Use ...
	($have_extra_portability ): ... this new global variable.
	Add a trailing "1;" to avoid spurious errors upon the importing
	of this module.
	* tests/extra-portability.test: Update and extend.
	* NEWS: Update.

2011-11-03  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: various minor tweakings, mostly related to AM_PROG_AR
	* tests/alloca.test: Adjust to new portability requirements due
	to the new AM_PROG_AR macro.
	* tests/discover.test: Likewise.
	* tests/libobj3.test: Likewise.
	* tests/pluseq7.test: Likewise.  Also, make grepping of automake
	expected error message stricter.
	* tests/stdlib.test: Likewise, and extend the test a bit.
	* tests/parse.test (configure.in): Remove redundant call to
	AC_PROG_RANLIB.
	* tests/library2.test: Adjust to new portability requirements
	due to the new AM_PROG_AR macro.  Also ...
	(configure.in): ... add call to AC_PROG_CC, to ensure automake
	really fails for the expected reason.

2011-11-03  Zack Weinberg <zackw@panix.com>  (tiny change)
	    Stefano Lattarini  <stefano.lattarini@gmail.com>

	maint-mode: fix botched configure messages
	This change fixes automake bug#9890.
	* m4/maintainer.m4 (AM_MAINTAINER_MODE): Fix the "checking ..."
	configure message related to the enabling/disabling of maintainer
	mode.
	* tests/help-maintainer.test: Renamed ...
	* tests/maintmode-configure-msg.test: ... to this, and extended
	to cover the fixed bug.  Also, since we are at it, make grepping
	of configure help screens stricter, and throw in some few other
	changes to reduce code duplication and enhance readability.
	* tests/Makefile.am (TESTS): Update.