@@ -31,7 +31,7 @@ libfoo_a_SOURCES = foo.c
 END
 
 $ACLOCAL
-AUTOMAKE_fails
+AUTOMAKE_fails -Wextra-portability
 
 grep 'requires.*AM_PROG_AR' stderr
 
