@@ -37,7 +37,7 @@ END
 
 libtoolize
 $ACLOCAL
-AUTOMAKE_fails
+AUTOMAKE_fails -Wextra-portability
 
 grep 'requires.*AM_PROG_AR' stderr
 
@@ -52,6 +52,6 @@ AC_OUTPUT
 END
 
 $ACLOCAL
-$AUTOMAKE --add-missing
+$AUTOMAKE -Wextra-portability --add-missing
 
 :
