@@ -1,3 +1,10 @@
+2011-11-08  Peter Rosin  <peda@lysator.liu.se>
+
+	tests: fix broken backport of AM_PROG_AR tests
+	* tests/ar-lib3.test: Explicitly request -Wextra-portability
+	in order to trigger the expected error.
+	* tests/ar-lib4.test: Likewise.
+
 2011-11-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	warnings: 'extra-portability' category is not implied by '-Wall'
